--- a/Inventarization.Android.Client/app/src/main/res/values/strings.xml
+++ b/Inventarization.Android.Client/app/src/main/res/values/strings.xml
@@ -33,5 +33,7 @@
     <string name="close_zone">Close zone</string>
     <string name="zone">Zone</string>
     <string name="title_activity_zone_select">Select zone</string>
-    <string name="accept">ok</string>
+    <string name="accept">Ok</string>
+    <string name="create">Create</string>
+    <string name="Search">Search</string>
 </resources>
