--- a/Inventarization.Android.Client/app/src/main/res/values-zh-rCN/strings.xml
+++ b/Inventarization.Android.Client/app/src/main/res/values-zh-rCN/strings.xml
@@ -38,4 +38,5 @@
     <string name="Search">Search</string>
     <string name="OpenZone">Open zone</string>
     <string name="Accept">Accept</string>
+    <string name="no">no</string>
 </resources>
