--- a/Inventarization.Android.Client/app/src/main/res/values/strings.xml
+++ b/Inventarization.Android.Client/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="Accept">Accept</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_workflow_selection">WorkflowSelection</string>
+    <string name="no">no</string>
 </resources>
