--- a/Inventarization.Android.Client/app/src/main/res/values/strings.xml
+++ b/Inventarization.Android.Client/app/src/main/res/values/strings.xml
@@ -38,24 +38,24 @@
     <string name="Search">Search</string>
     <string name="OpenZone">Open zone</string>
     <string name="Accept">Accept</string>
-    <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_workflow_selection">WorkflowSelection</string>
     <string name="no">no</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password" translatable="false">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
+    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
         completions."
     </string>
     <string name="prompt_login">Login</string>
     <string name="error_invalid_login">The login is invalid</string>
     <string name="title_activity_blind_scan">BlindScanActivity</string>
+    <string name="Add">Add</string>
 </resources>
