--- a/Inventarization.Android.Client/app/src/main/res/values-ru/strings.xml
+++ b/Inventarization.Android.Client/app/src/main/res/values-ru/strings.xml
@@ -55,4 +55,5 @@
     <string name="first_scan">Первое сканирование</string>
     <string name="second_scan">Повторное сканирование</string>
     <string name="blind_scan">Слепой пересчёт</string>
+    <string name="pick_zone">Укажите зону</string>
 </resources>
