--- a/Inventarization.Android.Client/app/src/main/res/values/strings.xml
+++ b/Inventarization.Android.Client/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="first_scan">First scan</string>
     <string name="second_scan">Second scan</string>
     <string name="blind_scan">Blind scan</string>
+    <string name="pick_zone">Pick zone</string>
 </resources>
